--- a/toniSalvadoRubio_FirstCommit_Ejercicio3_FCFrontend/dashboard.html
+++ b/toniSalvadoRubio_FirstCommit_Ejercicio3_FCFrontend/dashboard.html
@@ -14,28 +14,165 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
-</head>
-<!-- Bootstrap -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-<!-- CSS -->
-<link href="assets/styles/scss/main.css" rel="stylesheet" type="text/css" />
-<link href="assets/styles/scss/dashboard.css" rel="stylesheet" type="text/css" />
+    <!-- Bootstrap icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- CSS -->
+    <link href="assets/styles/scss/main.css" rel="stylesheet" type="text/css" />
+    <link href="assets/styles/scss/dashboard.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-    <div class="home">
+    <div class="dashboard">
         <header class="header">
             <div id="logo">
                 <h1>OpenBootcamp<span class="cm-text--green">Alumnos</span></h1>
             </div>
             <div class="profile">
-                <div class="profile-img"><span>NA</span></div>
-                <h3>UserName</h3>
+                <div class="profile-img">
+                    <h4>NA</h4>
+                </div>
+                <span class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
+                        aria-expanded="false">UserName<i class="bi bi-chevron-down"></i></a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#">Perfil</a></li>
+                    </ul>
+                </span>
             </div>
         </header>
-        <main class="page wrapper">
-
+        <main>
+            <div class="wrapper admin-panel">
+                <div>
+                    <div class="dashboard-navbar">
+                        <h2 class="section-title">Alumnos</h2>
+                        <form class="form-inline search">
+                            <i class="bi bi-search"></i>
+                            <input class="form-control" type="search"
+                                placeholder="Buscar por Nombre, Email o Palabra clave..." aria-label="Search">
+                        </form>
+                        <button type="button" class="btn btn-outline-secondary"><i class="bi bi-plus"></i>Añadir
+                            alumnos</button>
+                    </div>
+                    <div>
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th scope="col">Nombre <i class="bi bi-arrow-down-up"></i></th>
+                                    <th scope="col">Ciudad <i class="bi bi-arrow-down-up"></i></th>
+                                    <th scope="col">País <i class="bi bi-arrow-down-up"></i></th>
+                                    <th scope="col">Teléfono <i class="bi bi-arrow-down-up"></i></th>
+                                    <th scope="col">Correo electrónico <i class="bi bi-arrow-down-up"></i></th>
+                                    <th scope="col">Etiquetas <i class="bi bi-arrow-down-up"></i></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td scope="row">Álvaro Sánchez Monteagudo</td>
+                                    <td>Valencia</td>
+                                    <td>España</td>
+                                    <td>+34 657 85 25 46</td>
+                                    <td>smonteagudo@gm...</td>
+                                    <td class="tags">HTML&CSS</td>
+                                </tr>
+                                <tr>
+                                    <td scope="row">Amparo Herrera Climent</td>
+                                    <td>Sevilla</td>
+                                    <td>España</td>
+                                    <td>+34 689 25 48 65</td>
+                                    <td>hcliment@gmail.com</td>
+                                    <td class="tags">Angular</td>
+                                </tr>
+                                <tr>
+                                    <td scope="row">Ana Gutierrez Lozano</td>
+                                    <td>Valencia</td>
+                                    <td>España</td>
+                                    <td>+34 925 65 87 65</td>
+                                    <td>glozano@gmail.com</td>
+                                    <td class="tags">Angular</td>
+                                </tr>
+                                <tr>
+                                    <td scope="row">Antonio Miguel Lacunza</td>
+                                    <td>Madrid</td>
+                                    <td>España</td>
+                                    <td>+34 658 95 24 56</td>
+                                    <td>mlacunza@gmail...</td>
+                                    <td class="tags">Angular</td>
+                                </tr>
+                                <tr>
+                                    <td scope="row">Antonio Delgado Jimeno</td>
+                                    <td>Gijón</td>
+                                    <td>España</td>
+                                    <td>+34 925 65 54 25</td>
+                                    <td>djimeno@gmail.com</td>
+                                    <td class="tags">HTML&CSS</td>
+                                </tr>
+                                <tr>
+                                    <td scope="row">Belén Jerez Rivera</td>
+                                    <td>Barcelona</td>
+                                    <td>España</td>
+                                    <td>+34 697 82 95 24</td>
+                                    <td>jrivera@gmail.com</td>
+                                    <td class="tags">HTML&CSS</td>
+                                </tr>
+                                <tr>
+                                    <td scope="row">Carla Barroso Soriano</td>
+                                    <td>Valencia</td>
+                                    <td>España</td>
+                                    <td>+34 958 65 41 54</td>
+                                    <td>bsoriano@gmail.com</td>
+                                    <td class="tags">Symfony</td>
+                                </tr>
+                                <tr>
+                                    <td scope="row">Carlos Yuste Guerrero</td>
+                                    <td>Oviedo</td>
+                                    <td>España</td>
+                                    <td>+34 958 65 41 54</td>
+                                    <td>yguerrero@gmail...</td>
+                                    <td class="tags">Flutter</td>
+                                </tr>
+                                <tr>
+                                    <td scope="row">Carmina Pérez López</td>
+                                    <td>Lugo</td>
+                                    <td>España</td>
+                                    <td>+34 695 84 62 54</td>
+                                    <td>plopez@gmail.com</td>
+                                    <td class="tags">HTML&CSS</td>
+                                </tr>
+                                <tr>
+                                    <td scope="row">Carlos Yuste Guerrero</td>
+                                    <td>Jaén</td>
+                                    <td>España</td>
+                                    <td>+34 695 69 35 62</td>
+                                    <td>yguerrero@gmail...</td>
+                                    <td class="tags">HTML&CSS</td>
+                                </tr>
+                                <tr>
+                                    <td scope="row">Belén Jerez Rivera</td>
+                                    <td>Barcelona</td>
+                                    <td>España</td>
+                                    <td>+34 697 82 95 24</td>
+                                    <td>jrivera@gmail.com.</td>
+                                    <td class="tags">HTML&CSS</td>
+                                </tr>
+                                <tr>
+                                    <td scope="row">Carlos Yuste Guerrero</td>
+                                    <td>Oviedo</td>
+                                    <td>España</td>
+                                    <td>+34 697 82 95 65</td>
+                                    <td>yguerrero@gmail...</td>
+                                    <td class="tags">Angular</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="dashboard-sidebar">
+                    Sidebar
+                </div>
+            </div>
         </main>
     </div>
 </body>
