Ejercicio 3 base acabada. Falta estilizar selects.

--- a/toniSalvadoRubio_FirstCommit_Ejercicio3_FCFrontend/dashboard.html
+++ b/toniSalvadoRubio_FirstCommit_Ejercicio3_FCFrontend/dashboard.html
@@ -11,9 +11,7 @@
     <!-- favicon -->
     <link rel="shortcut icon" href="./assets/img/favicon.ico    ">
     <!-- google fonts -->
-    <link
-        href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <!-- Bootstrap icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <!-- Bootstrap -->
@@ -45,7 +43,7 @@
         </header>
         <main>
             <div class="wrapper admin-panel">
-                <div>
+                <div class="admin-main">
                     <div class="dashboard-navbar">
                         <h2 class="section-title">Alumnos</h2>
                         <form class="form-inline search">
@@ -73,104 +71,199 @@
                                     <td scope="row">Álvaro Sánchez Monteagudo</td>
                                     <td>Valencia</td>
                                     <td>España</td>
-                                    <td>+34 657 85 25 46</td>
-                                    <td>smonteagudo@gm...</td>
-                                    <td class="tags">HTML&CSS</td>
+                                    <td class="num">+34 657 85 25 46</td>
+                                    <td>smonteagudo@gmail.com</td>
+                                    <td class="tags">
+                                        <span>HTML&CSS</span>
+                                        <span>ANGULAR</span>
+                                        <span class="num">+4</span>
+                                    </td>
                                 </tr>
                                 <tr>
                                     <td scope="row">Amparo Herrera Climent</td>
                                     <td>Sevilla</td>
                                     <td>España</td>
-                                    <td>+34 689 25 48 65</td>
+                                    <td class="num">+34 689 25 48 65</td>
                                     <td>hcliment@gmail.com</td>
-                                    <td class="tags">Angular</td>
+                                    <td class="tags">
+                                        <span>ANGULAR</span>
+                                        <span>REACT</span>
+                                        <span class="num">+2</span>
+                                    </td>
                                 </tr>
                                 <tr>
                                     <td scope="row">Ana Gutierrez Lozano</td>
                                     <td>Valencia</td>
                                     <td>España</td>
-                                    <td>+34 925 65 87 65</td>
+                                    <td class="num">+34 925 65 87 65</td>
                                     <td>glozano@gmail.com</td>
-                                    <td class="tags">Angular</td>
+                                    <td class="tags">
+                                        <span>ANGULAR</span>
+                                        <span>REACT</span>
+                                        <span class="num">+2</span>
+                                    </td>
                                 </tr>
                                 <tr>
                                     <td scope="row">Antonio Miguel Lacunza</td>
                                     <td>Madrid</td>
                                     <td>España</td>
-                                    <td>+34 658 95 24 56</td>
-                                    <td>mlacunza@gmail...</td>
-                                    <td class="tags">Angular</td>
+                                    <td class="num">+34 658 95 24 56</td>
+                                    <td>mlacunza@gmail.com</td>
+                                    <td class="tags">
+                                        <span>ANGULAR</span>
+                                        <span>HTML&CSS</span>
+                                        <span class="num">+3</span>
+
+                                    </td>
                                 </tr>
                                 <tr>
                                     <td scope="row">Antonio Delgado Jimeno</td>
                                     <td>Gijón</td>
                                     <td>España</td>
-                                    <td>+34 925 65 54 25</td>
+                                    <td class="num">+34 925 65 54 25</td>
                                     <td>djimeno@gmail.com</td>
-                                    <td class="tags">HTML&CSS</td>
+                                    <td class="tags">
+                                        <span>HTML&CSS</span>
+                                        <span>REACT</span>
+                                        <span class="num">+1</span>
+                                    </td>
                                 </tr>
                                 <tr>
                                     <td scope="row">Belén Jerez Rivera</td>
                                     <td>Barcelona</td>
                                     <td>España</td>
-                                    <td>+34 697 82 95 24</td>
+                                    <td class="num">+34 697 82 95 24</td>
                                     <td>jrivera@gmail.com</td>
-                                    <td class="tags">HTML&CSS</td>
+                                    <td class="tags">
+                                        <span>ANGULAR</span>
+                                        <span>HTML&CSS</span>
+                                        <span class="num">+4</span>
+                                    </td>
                                 </tr>
                                 <tr>
                                     <td scope="row">Carla Barroso Soriano</td>
                                     <td>Valencia</td>
                                     <td>España</td>
-                                    <td>+34 958 65 41 54</td>
+                                    <td class="num">+34 958 65 41 54</td>
                                     <td>bsoriano@gmail.com</td>
-                                    <td class="tags">Symfony</td>
+                                    <td class="tags">
+                                        <span>REACT</span>
+                                        <span>SYMFONY</span>
+                                        <span class="num">+5</span>
+                                    </td>
                                 </tr>
                                 <tr>
                                     <td scope="row">Carlos Yuste Guerrero</td>
                                     <td>Oviedo</td>
                                     <td>España</td>
-                                    <td>+34 958 65 41 54</td>
-                                    <td>yguerrero@gmail...</td>
-                                    <td class="tags">Flutter</td>
+                                    <td class="num">+34 958 65 41 54</td>
+                                    <td>yguerrero@gmail.com</td>
+                                    <td class="tags">
+                                        <span>REACT</span>
+                                        <span>FLUTTER</span>
+                                        <span class="num">+8</span>
+                                    </td>
                                 </tr>
                                 <tr>
                                     <td scope="row">Carmina Pérez López</td>
                                     <td>Lugo</td>
                                     <td>España</td>
-                                    <td>+34 695 84 62 54</td>
+                                    <td class="num">+34 695 84 62 54</td>
                                     <td>plopez@gmail.com</td>
-                                    <td class="tags">HTML&CSS</td>
+                                    <td class="tags"><span>HTML&CSS</span><span>REACT</span><span class="num">+2</span></td>
                                 </tr>
                                 <tr>
                                     <td scope="row">Carlos Yuste Guerrero</td>
                                     <td>Jaén</td>
                                     <td>España</td>
-                                    <td>+34 695 69 35 62</td>
-                                    <td>yguerrero@gmail...</td>
-                                    <td class="tags">HTML&CSS</td>
+                                    <td class="num">+34 695 69 35 62</td>
+                                    <td>yguerrero@gmail.com</td>
+                                    <td class="tags"><span>HTML&CSS</span><span>REACT</span>
+                                        <span class="num">+7</span></td>
                                 </tr>
                                 <tr>
                                     <td scope="row">Belén Jerez Rivera</td>
                                     <td>Barcelona</td>
                                     <td>España</td>
-                                    <td>+34 697 82 95 24</td>
-                                    <td>jrivera@gmail.com.</td>
-                                    <td class="tags">HTML&CSS</td>
+                                    <td class="num">+34 697 82 95 24</td>
+                                    <td>jrivera@gmail.com</td>
+                                    <td class="tags"><span>HTML&CSS</span><span>REACT</span></td>
                                 </tr>
                                 <tr>
                                     <td scope="row">Carlos Yuste Guerrero</td>
                                     <td>Oviedo</td>
                                     <td>España</td>
-                                    <td>+34 697 82 95 65</td>
-                                    <td>yguerrero@gmail...</td>
-                                    <td class="tags">Angular</td>
+                                    <td class="num">+34 697 82 95 65</td>
+                                    <td>yguerrero@gmail.com</td>
+                                    <td class="tags"><span>ANGULAR</span><span>REACT</span>
+                                        <span class="num">+4</span></td>
                                 </tr>
                             </tbody>
                         </table>
                     </div>
                 </div>
-                <div class="dashboard-sidebar">
-                    Sidebar
+                <div class="sidebar">
+                    <div class="filters">
+                        <div class="row justify-content-between">
+                            <h5 class="col-auto section-title">Filtros de búsqueda</h5>
+                            <i class="bi bi-trash"></i>
+                        </div>
+                        <form>
+                            <div class="mb-3">
+                                <label for="etiquetas" class="form-label">Etiquetas</label>
+                                <input type="text" class="form-control" placeholder="Escribe para buscar....">
+                            </div>
+                            <div class="mb-3">
+                                <label for="pais" class="form-label">País</label>
+                                <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg pais">
+                                    <option selected>España</option>
+                                    <option value="1">Argentina</option>
+                                    <option value="2">Francia</option>
+                                    <option value="3">Alemania</option>
+                                </select>
+                            </div>
+                            <div class="mb-3">
+                                <label for="pais" class="form-label">Ciudad</label>
+                                <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg ciudad">
+                                    <option selected>Barcelona</option>
+                                    <option value="1">Madrid</option>
+                                    <option value="2">Bilbao</option>
+                                    <option value="3">Valencia</option>
+                                </select>
+                            </div>
+                            <div class="mb-3">
+                                <label class="form-label">Presencial/ a distancia</label>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="false" name="presencialidad">
+                                    <label class="form-check-label" for="flexCheckDefault">
+                                        Presencial
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="true" name="presencialidad">
+                                    <label class="form-check-label" for="flexCheckChecked">
+                                        En remoto
+                                    </label>
+                                </div>
+                            </div>
+                            <div class="mb-3">
+                                <label class="form-label">Posibilidad traslado</label>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="true" name="traslado">
+                                    <label class="form-check-label">
+                                        Si
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="false" name="traslado">
+                                    <label class="form-check-label">
+                                        No
+                                    </label>
+                                </div>
+                            </div>
+                        </form>
+
+                    </div>
                 </div>
             </div>
         </main>
