--- a/toniSalvadoRubio_FirstCommit_Ejercicio1_FCFrontend/index.html
+++ b/toniSalvadoRubio_FirstCommit_Ejercicio1_FCFrontend/index.html
@@ -28,7 +28,7 @@
         <div class="wrapper">
             <header>
                 <div id="logo">
-                    <h1>OpenBootcamp<span class="cm-text--green">Alumnos</span></h1>
+                    <h1>OpenBootcamp <span class="cm-text--green">| Alumnos</span></h1>
                 </div>
             </header>
             <main class="page">
