--- a/toniSalvadoRubio_FirstCommit_Ejercicio3_FCFrontend/dashboard.html
+++ b/toniSalvadoRubio_FirstCommit_Ejercicio3_FCFrontend/dashboard.html
@@ -26,7 +26,7 @@
     <div class="dashboard">
         <header class="header">
             <div id="logo">
-                <h1>OpenBootcamp<span class="cm-text--green">Alumnos</span></h1>
+                <h1>OpenBootcamp <span class="cm-text--green">| Alumnos</span></h1>
             </div>
             <div class="profile">
                 <div class="profile-img">
@@ -212,6 +212,20 @@
                             <div class="mb-3">
                                 <label for="etiquetas" class="form-label">Etiquetas</label>
                                 <input type="text" class="form-control" placeholder="Escribe para buscar....">
+                                <div class="tag-list">
+                                    <span>HTML&CSS<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
+                                        <path fill-rule="evenodd" d="M13.854 2.146a.5.5 0 0 1 0 .708l-11 11a.5.5 0 0 1-.708-.708l11-11a.5.5 0 0 1 .708 0Z"/>
+                                        <path fill-rule="evenodd" d="M2.146 2.146a.5.5 0 0 0 0 .708l11 11a.5.5 0 0 0 .708-.708l-11-11a.5.5 0 0 0-.708 0Z"/>
+                                      </svg></span>
+                                    <span>React<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
+                                        <path fill-rule="evenodd" d="M13.854 2.146a.5.5 0 0 1 0 .708l-11 11a.5.5 0 0 1-.708-.708l11-11a.5.5 0 0 1 .708 0Z"/>
+                                        <path fill-rule="evenodd" d="M2.146 2.146a.5.5 0 0 0 0 .708l11 11a.5.5 0 0 0 .708-.708l-11-11a.5.5 0 0 0-.708 0Z"/>
+                                      </svg></span>
+                                    <span>Angular<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
+                                        <path fill-rule="evenodd" d="M13.854 2.146a.5.5 0 0 1 0 .708l-11 11a.5.5 0 0 1-.708-.708l11-11a.5.5 0 0 1 .708 0Z"/>
+                                        <path fill-rule="evenodd" d="M2.146 2.146a.5.5 0 0 0 0 .708l11 11a.5.5 0 0 0 .708-.708l-11-11a.5.5 0 0 0-.708 0Z"/>
+                                      </svg></span>
+                                </div>
                             </div>
                             <div class="mb-3">
                                 <label for="pais" class="form-label">País</label>
