--- a/toniSalvadoRubio_FirstCommit_Ejercicio3_FCFrontend/dashboard.html
+++ b/toniSalvadoRubio_FirstCommit_Ejercicio3_FCFrontend/dashboard.html
@@ -18,8 +18,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- CSS -->
-    <link href="assets/styles/scss/main.css" rel="stylesheet" type="text/css" />
-    <link href="assets/styles/scss/dashboard.css" rel="stylesheet" type="text/css" />
+    <link href="assets/styles/css/main.css" rel="stylesheet" type="text/css" />
+    <link href="assets/styles/css/dashboard.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
