--- a/toniSalvadoRubio_FirstCommit_Ejercicio5_FCFrontend/dashboard.html
+++ b/toniSalvadoRubio_FirstCommit_Ejercicio5_FCFrontend/dashboard.html
@@ -48,7 +48,7 @@
                         <h2 class="section-title">Alumnos</h2>
                         <form class="form-inline search">
                             <i class="bi bi-search"></i>
-                            <input class="form-control" type="search"
+                            <input id="filter-alumnos" class="form-control search-alumnos" type="search"
                                 placeholder="Buscar por Nombre, Email o Palabra clave..." aria-label="Search">
                         </form>
                         <button type="button" class="btn btn-outline-secondary"><i class="bi bi-plus"></i>Añadir
@@ -105,8 +105,8 @@
                                 </tr>
                                 <tr>
                                     <td scope="row">Antonio Miguel Lacunza</td>
-                                    <td>Madrid</td>
-                                    <td>España</td>
+                                    <td>Nápoles</td>
+                                    <td>Italia</td>
                                     <td class="num">+34 658 95 24 56</td>
                                     <td>mlacunza@gmail.com</td>
                                     <td class="tags">
@@ -118,8 +118,8 @@
                                 </tr>
                                 <tr>
                                     <td scope="row">Andrea Delgado Jimeno</td>
-                                    <td>Gijón</td>
-                                    <td>España</td>
+                                    <td>Roma</td>
+                                    <td>Italia</td>
                                     <td class="num">+34 925 65 54 25</td>
                                     <td>djimeno@gmail.com</td>
                                     <td class="tags">
@@ -166,8 +166,8 @@
                                 </tr>
                                 <tr>
                                     <td scope="row">Carmina Pérez López</td>
-                                    <td>Lugo</td>
-                                    <td>España</td>
+                                    <td>París</td>
+                                    <td>Francia</td>
                                     <td class="num">+34 695 84 62 54</td>
                                     <td>plopez@gmail.com</td>
                                     <td class="tags"><span>HTML&CSS</span><span>REACT</span><span class="num">+2</span></td>
@@ -191,12 +191,12 @@
                                 </tr>
                                 <tr>
                                     <td scope="row">Carlos Yuste Guerrero</td>
-                                    <td>Oviedo</td>
-                                    <td>España</td>
+                                    <td>París</td>
+                                    <td>Francia</td>
                                     <td class="num">+34 697 82 95 65</td>
                                     <td>yguerrero@gmail.com</td>
                                     <td class="tags"><span>ANGULAR</span><span>REACT</span>
-                                        <span class="num">+4</span></td>
+                                    <span class="num">+4</span></td>
                                 </tr>
                             </tbody>
                         </table>
@@ -290,5 +290,5 @@
     integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
     crossorigin="anonymous"></script>
 <script src="./js/sort_table.js"></script>
-
+<script src="./js/filter_search_alumnos.js"></script>
 </html>
