--- a/toniSalvadoRubio_FirstCommit_Ejercicio2_FCFrontend/index.html
+++ b/toniSalvadoRubio_FirstCommit_Ejercicio2_FCFrontend/index.html
@@ -34,19 +34,19 @@
             <main class="page">
                 <form>
                     <div class="mb-3">
-                        <label for="exampleInputEmail1" class="form-label">Email</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                        <label for="email" class="form-label">Email</label>
+                        <input type="email" class="form-control" id="email" aria-describedby="emailHelp"
                             placeholder="Introduce tu correo">
                     </div>
                     <div class="mb-3">
-                        <label for="exampleInputPassword1" class="form-label">Contraseña</label>
-                        <input type="password" class="form-control" id="exampleInputPassword1"
+                        <label for="pasword" class="form-label">Contraseña</label>
+                        <input type="password" class="form-control" id="pasword"
                             placeholder="Introduce tu contraseña">
                     </div>
                     <div class="mb-3 row">
                         <div class="mb-3 col-6 form-check">
-                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                            <label class="form-check-label" for="exampleCheck1">Recuérdame</label>
+                            <input type="checkbox" class="form-check-input" id="recuerdame">
+                            <label class="form-check-label" for="recuerdame">Recuérdame</label>
                         </div>
                         <div class="col-6">
                             <a href="#" class="cm-text--green cm-text-600">He olvidado la contraseña</a>
