--- a/toniSalvadoRubio_FirstCommit_Ejercicio4_FCFrontend/dashboard.html
+++ b/toniSalvadoRubio_FirstCommit_Ejercicio4_FCFrontend/dashboard.html
@@ -237,7 +237,7 @@
                                 </select>
                             </div>
                             <div class="mb-3">
-                                <label for="pais" class="form-label">Ciudad</label>
+                                <label for="ciudad" class="form-label">Ciudad</label>
                                 <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg ciudad">
                                     <option selected>Barcelona</option>
                                     <option value="1">Madrid</option>
