--- a/toniSalvadoRubio_FirstCommit_Ejercicio7_FCFrontend/candidateForm.html
+++ b/toniSalvadoRubio_FirstCommit_Ejercicio7_FCFrontend/candidateForm.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="utf-8" />
     <title>OpenBootcamp | Alumnos</title>
@@ -107,31 +106,9 @@
                         <button type="button" class="btn btn-outline-secondary"><i class="bi bi-trash"></i>Borrar</label> 
                     </div>
                 </div>
-                <div class="col-12 mb-3">
+                <div class="col-12 mb-3 tags">
                     <label for="etiquetas" class="form-label">Etiquetas</label>
-                    <input type="text" class="tags form-control" placeholder="Escribe para buscar...."  name="etiquetas">
-                    <div class="tag-list">
-                        <span>HTML&CSS<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                class="bi bi-x-lg" viewBox="0 0 16 16">
-                                <path fill-rule="evenodd"
-                                    d="M13.854 2.146a.5.5 0 0 1 0 .708l-11 11a.5.5 0 0 1-.708-.708l11-11a.5.5 0 0 1 .708 0Z" />
-                                <path fill-rule="evenodd"
-                                    d="M2.146 2.146a.5.5 0 0 0 0 .708l11 11a.5.5 0 0 0 .708-.708l-11-11a.5.5 0 0 0-.708 0Z" />
-                            </svg></span>                           
-                        <span>React<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                class="bi bi-x-lg" viewBox="0 0 16 16">
-                                <path fill-rule="evenodd"
-                                    d="M13.854 2.146a.5.5 0 0 1 0 .708l-11 11a.5.5 0 0 1-.708-.708l11-11a.5.5 0 0 1 .708 0Z" />
-                                <path fill-rule="evenodd"
-                                    d="M2.146 2.146a.5.5 0 0 0 0 .708l11 11a.5.5 0 0 0 .708-.708l-11-11a.5.5 0 0 0-.708 0Z" />
-                            </svg></span>
-                        <span>Angular<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                class="bi bi-x-lg" viewBox="0 0 16 16">
-                                <path fill-rule="evenodd"
-                                    d="M13.854 2.146a.5.5 0 0 1 0 .708l-11 11a.5.5 0 0 1-.708-.708l11-11a.5.5 0 0 1 .708 0Z" />
-                                <path fill-rule="evenodd"
-                                    d="M2.146 2.146a.5.5 0 0 0 0 .708l11 11a.5.5 0 0 0 .708-.708l-11-11a.5.5 0 0 0-.708 0Z" />
-                            </svg></span>
+                    <div id="tag-list" class="tag-list">
                     </div>
                 </div>
             </form>
@@ -144,5 +121,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
     integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
     crossorigin="anonymous"></script>
-
+<script src="./js/token-autocomplete.js"></script>
+<script src="./js/token-config.js"></script>
 </html>
